--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,8 @@
   <link rel="icon" href="placehold.it/favicon.ico">
   <title>{% if title %}{{title}} - {% endif %}Pytalki</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
   <link href="//getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -23,7 +22,7 @@
   <div class="header">
     <nav>
       <ul class="nav nav-pills pull-right">
-        <li role="presentation" class="active"><a href="#">Home</a></li>
+        <!--<li role="presentation" class="active"><a href="#">Home</a></li>-->
         <li role="presentation"><a href="#">About</a></li>
         <li role="presentation"><a href="#">Contact</a></li>
       </ul>
@@ -39,5 +38,7 @@
 </div> <!-- /container -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+<script src="./statics/app.js"></script>
 </body>
 </html>
