--- a/templates/teachers.html
+++ b/templates/teachers.html
@@ -1,25 +1,49 @@
 {% extends "base.html" %}
 {% block content %}
 <div id="content">
-  <h2>{{title}}</h2>
+  <h2 id="title-message">{{title}}</h2>
+  <div class="row" style="margin-top: 5px; margin-bottom: 10px;">
+    <div class="col-xs-6 col-md-4">
+      <label for="user-type">User type</label>
+      <select id="user-type" class="select enterIndex" style="width:219px">
+        <option value="teacher">Teacher</option>
+        <option value="student">Student</option>
+      </select>
+    </div>
+    <div class="col-xs-6 col-md-4">
+      <label id="lang-action" for="lang-code">Teaches</label>
+      <select id="lang-code" style="width:219px">
+        <!--<option value="all">Any languages</option>-->
+        {% for lang in language_list %}
+        <option value="{{ lang.code }}">{{ lang.name }}</option>
+        {% endfor %}
+      </select>
+    </div>
+  </div>
+  <div class="row" style="margin-left: 2px; margin-bottom: 20px;">
+    <input type="button" id="search-button" class="btn btn-primary" value="Browse">
+  </div>
+  <div id="search-result"></div>
+</div>
+<script type="text/template" id="option_template">
   <ul class="media-list">
-    {% for user in list %}
+    <% _.each(user_list, function(user) { %>
     <li class="media">
       <div class="media-left media-top">
         <a href="#">
-          <img class="media-object" src="http://placehold.it/80&text={{ user.id }}" width="80">
+          <img class="media-object" src="http://placehold.it/80&text=<%= user.id %>" class="img-thumbnail" width="80">
         </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading">{{ user.name }}</h4>
+        <h4 class="media-heading"><%= user.name %></h4>
         <ul>
-          {% for lang in user.lang_profile %}
-          <li>{{ lang.lang_code }} ({{ lang.lang_level }})</li>
-        {% endfor %}
+          <% _.each(user.lang_profile, function(lang) { %>
+          <li><%= lang.lang_code %>: <%= lang.lang_level %></li>
+          <% }); %>
         </ul>
       </div>
     </li>
-    {% endfor %}
+    <% }); %>
   </ul>
-</div>
+</script>
 {% endblock %}
